# module5_pa_python_js

./: LICENSE  README.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  .gitignore  noxfile.py  pyproject.toml
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/api/templates/: recipes.html
backend/core/: settings.py  urls.py
backend/eg_app/: apps.py
backend/src/: settings.py
backend/tests/: test_views.py
frontend/: .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml
frontend/src/lib/: types.ts
frontend/src/routes/: +page.server.ts  +page.svelte
