[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.2",
    "django-environ>=0.13.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
    "mypy>=1.19.1",
    "nox-uv>=0.7.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
prod = [
    "gunicorn>=25.1.0",
]
